--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,9 @@ pylint = "^2.17.4"
 pytest = "^7.4.0"
 mypy = "^1.4.1"
 ipython = "^8.14.0"
+ipykernel = "^6.23.3"
+pycairo = "^1.24.0"
+pyqt5 = "^5.15.9"
 
 [build-system]
 requires = ["poetry-core"]
